# cpp-cmake-template

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  generate_compile_commands.bat
Src/: CMakeLists.txt  main.cpp
Src/submodule/: CMakeLists.txt  module.cpp  module.h
